# RollerCoaster

./: CMakeLists.txt
src/: hillsFinder.cpp  hillsFinder.h  main.cpp
tests/: tests.cpp
